--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@600;700;800;900&family=Rubik:wght@400;500;800&display=swap" rel="stylesheet">
 
 
+    <!-- 
+        - preload images
+     -->
+
+     <link rel="preload" as="image" href="./assets/images/hero-banner.png">
+     <link rel="preload" as="image" href="./assets/images/hero-circle-one.png">
+     <link rel="preload" as="image" href="./assets/images/hero-circle-two.png">
+     <link rel="preload" as="image" href="./assets/images/heart-rate.svg">
+     <link rel="preload" as="image" href="./assets/images/calories.svg">
+
+
 </head>
 <body>
     
@@ -37,7 +48,7 @@
                 <span class="span">EnergizeX</span>
             </a>
 
-            <nav class="navbar active" data-navbar>
+            <nav class="navbar" data-navbar>
 
                 <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
 
@@ -82,6 +93,47 @@
 
         </div>
      </header>
+
+
+
+     <main>
+        <article>
+
+            <!-- 
+                -- #HERO
+             -->
+             
+             <section class="section hero bg-dark has-after has-bg-image" id="home" aria-label="hero" data-section style="background-image: url('./assets/images/hero-bg.png')">
+                <div class="container">
+                    <div class="hero-content">
+                        <p class="hero-subtitle">
+                            <strong class="strong">The Best</strong>Fitness Club
+                        </p>
+                        <h1 class="h1 hero-title">Work Hard To Get Better Life</h1>
+                        <p class="section-text">
+                            Duis mollis felis quis libero dictum vehicula. Duis dictum lorem mi, a faucibus nisi eleifend eu.
+                        </p>
+                        <a href="#" class="btn btn-primary">Get Started</a>
+                    </div>
+
+                    <div class="hero-banner">
+
+                        <img src="./assets/images/hero-banner.png" width="660" height="753" alt="hero banner" class="w-100">
+
+                        <img src="./assets/images/hero-circle-one.png" width="666" height="666" aria-hidden="true" alt="" class="circle circle-1">
+
+                        <img src="./assets/images/hero-circle-two.png" width="666" height="666" aria-hidden="true" alt="" class="circle circle-2">
+
+                        <img src="./assets/images/heart-rate.svg" width="255" height="270" alt="heart rate" class="abs-img abs-img-1">
+
+                        <img src="./assets/images/calories.svg" width="348" height="224" alt="calories" class="abs-img abs-img-2">
+
+                    </div>
+                </div>
+            </section>
+
+        </article>
+     </main>
 
 
 
