--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <p class="section-text">
                             Duis mollis felis quis libero dictum vehicula. Duis dictum lorem mi, a faucibus nisi eleifend eu.
                         </p>
-                        <a href="#" class="btn btn-primary">Get Started</a>
+                        <a href="#" class="btn btn-secondary">Get Started</a>
                     </div>
 
                     <div class="hero-banner">
