--- a/index.html
+++ b/index.html
@@ -651,8 +651,8 @@
 
 
                     <div>
-                        <a href="mailto:info@fitlife.com" class="footer-list">info@fitlife.com</a>
-                        <a href="mailto:services@fitlife.com" class="footer-list">services@fitlife.com</a>
+                        <a href="mailto:info@energizex.com" class="footer-list">info@energizex.com</a>
+                        <a href="mailto:services@energizex.com" class="footer-list">services@energizex.com</a>
                     </div>
                 </li>
         
@@ -708,7 +708,7 @@
         <div class="container">
 
             <p class="copyright">
-                &copy; 2022 Fitlife. All Rights Reserved By <a href="" class="copyright-link">codewithsadee.</a> 
+                &copy; 2022 EnergizeX. All Rights Reserved By <a href="" class="copyright-link">Dammy</a> 
             </p>
 
             <ul class="footer-bottom-list">
@@ -728,6 +728,18 @@
 
       </footer>
 
+
+
+
+
+      <!-- 
+        -- #BACK TO TOP --
+       -->
+
+
+       <a href="#top" class="back-top-btn" aria-label="back to top" data-back-top-btn>
+        <ion-icon name="caret-up-sharp" aria-hidden="true"></ion-icon>
+       </a>
 
 
     <!-- custom JS link -->
