--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         </p>
                         <h1 class="h1 hero-title">Work Hard To Get Better Life</h1>
                         <p class="section-text">
-                            Duis mollis felis quis libero dictum vehicula. Duis dictum lorem mi, a faucibus nisi eleifend eu.
+                            Unleash Your Strength, Transform Your Life: Where Fitness Meets Flourish!
                         </p>
                         <a href="#" class="btn btn-secondary">Get Started</a>
                     </div>
